RESOLVED FIXED210715
Fix missing exception checks and handling in JSC APIs.
https://bugs.webkit.org/show_bug.cgi?id=210715
Summary Fix missing exception checks and handling in JSC APIs.
Mark Lam
Reported 2020-04-19 01:03:57 PDT
Attachments
proposed patch. (14.05 KB, patch)
2020-04-19 01:08 PDT, Mark Lam
no flags
proposed patch. (17.92 KB, patch)
2020-04-19 11:56 PDT, Mark Lam
saam: review+
Mark Lam
Comment 1 2020-04-19 01:08:58 PDT
Created attachment 396897 [details] proposed patch.
Mark Lam
Comment 2 2020-04-19 02:15:04 PDT
Comment on attachment 396897 [details] proposed patch. Need a bit more work. New patch coming.
Mark Lam
Comment 3 2020-04-19 11:56:52 PDT
Created attachment 396920 [details] proposed patch.
Saam Barati
Comment 4 2020-04-19 13:44:38 PDT
Comment on attachment 396920 [details] proposed patch. Can you add tests for all this?
Mark Lam
Comment 5 2020-04-19 14:09:37 PDT
(In reply to Saam Barati from comment #4) > Comment on attachment 396920 [details] > proposed patch. > > Can you add tests for all this? I already tried but am not able to. It was trickier than it looked on the surface. The result keep coming back as undefined when an exception is thrown. I filed https://bugs.webkit.org/show_bug.cgi?id=210725 to investigate this later.
Mark Lam
Comment 6 2020-04-19 14:18:52 PDT
Thanks for the review. Landed in r260343: <http://trac.webkit.org/r260343>.
Note You need to log in before you can comment on or make changes to this bug.